--- a/changelog.txt
+++ b/changelog.txt
@@ -22,24 +22,31 @@
     
   IAmNotAJeep wdog edits:
   Added check if miner is running or not when utilization dropped to restart miner faster (stubo mod)
-  Added check for internet and wait 10 seconds if its down before going to restart miner and reboot system (stubo mod)
-  Added check mining pool:port if internet is up before going to reboot system (papampi mod)
+  Added check for internet and wait if its down before going to restart miner and reboot system (stubo mod)
+  Added check mining pool:port if internet is up and wait before going to restart miner or reboot system (papampi mod)
   Added "Warning" to log output of alerts to catch them easier (papampi mod)
   Changed logfile location to tmpfs (papampi mod)
   Changed logging system to only keep last "warnings" with max 2k size.
   Added checking number of gpus installed vs system reported gpus at start of wdog, so you know if a gpu is not working.
   Added dynamic wait time based on gpu count for wdog to start check 
 
-  Maxximus temp edits:
-  Added "Warning" to log output of alerts to catch them easier (papampi mod)
-
+  Temp Control By LEENOOX:
+  Set higher process and disk I/O priorities - Temp control is essential service
+  Auto detection of number of GPU's
+  Only set, adjust and display available GPU's, dynamic variables creation
+  Numeric check of the return values from nvidia-smi (looking for numbers only, anything else = error)
+  Reboot if GPU error detected and watchdog didn't react for 60 seconds (act as a backup watchdog)
+  Added query delay to nvidia API (no burst spamming, added 0.5 sec delay, prevent overload), helps reduce stale shares
+  New (improved) display output including colors and bold text
+  Fixed the log file handling (Bug fix: Previous implemantation was not limiting the file size)
+  Removed repetitive GPUFanControlState setting, it only needs to be set once, not every cycle (prevent API overload)
+ 
+  Other fix and edits
   Added log rotation (papampi mod)
   changed minerinfo and papampi-telegram for new log locations (papampi mod)
   Create tmpfs partition to change logfile location to tmpfs to lower read/writes to HDD/USB (papampi mod)
   changed minerinfo web so those who dont use wtm dont see empty or no wtm entries
-  
-
-  
+    
   And so many more
   
   Keep calm and carry on mining ...
